Bug 414990 - Breeze sliders use selection color with no border which makes them become invisible when parent widget is selected
Summary: Breeze sliders use selection color with no border which makes them become inv...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.17.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: usability
: 415148 429437 429852 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-12-09 18:57 UTC by postix
Modified: 2021-06-08 16:29 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments
Screenshot of the issue. (32.07 KB, image/png)
2019-12-09 18:57 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2019-12-09 18:57:21 UTC
Created attachment 124401 [details]
Screenshot of the issue.

SUMMARY

When updating, there's a button "Tasks (XX %)" with a progressbar.
This button knows three different background colors: 
1) dark breeze when not hovered
2) light blue when hovered
3) blue when pressed

The blue from 3) has the same color as the progressbar unfortunately.



STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2019-12-13 19:34:24 UTC
Technically the styling for the selection color and progressbar color/style live in the QQC2 style framework; moving this there. Needs coordination with what we choose to do in the Breeze Widget style.
Comment 2 David Edmundson 2020-01-02 00:26:52 UTC
I don't see what's wrong at a QQC2-desktop-style level. It looks like it does on widgets.
Comment 3 Nate Graham 2020-01-02 00:30:23 UTC
See the attached screenshot. Maybe the bug is elsewhere?
Comment 4 Nate Graham 2020-01-02 00:31:16 UTC
Oops, wrong bug.

I guess we could consider this a Breeze bug.
Comment 5 Nate Graham 2020-01-02 00:31:58 UTC
*** Bug 415148 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2020-11-23 18:28:34 UTC
*** Bug 429437 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2020-11-30 22:43:27 UTC
*** Bug 429852 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2021-06-08 16:15:50 UTC
Git commit 97bc9ccea523adfa38f278b072a91ea941ab3c12 by Nate Graham, on behalf of Jan Blackquill.
Committed on 08/06/2021 at 14:09.
Pushed by ngraham into branch 'master'.

Make sliders, dials, and progress bars styled like Blue Ocean mockups

M  +19   -53   kstyle/breezehelper.cpp
M  +2    -13   kstyle/breezehelper.h
M  +5    -5    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/97bc9ccea523adfa38f278b072a91ea941ab3c12
Comment 9 postix 2021-06-08 16:17:13 UTC
\o/ does it go into 5.22.1 or 5.23?
Comment 10 Nate Graham 2021-06-08 16:29:20 UTC
5.23. :)