Make sliders, dials, and progress bars styled like Blue Ocean mockups

BUG: 414990